--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -1132,7 +1132,7 @@ EstimateScreen As screen:
                         Fill: =RGBA(0, 0, 0, 0)
                         Font: =Font.Arial
                         Format: =TextFormat.Number
-                        HintText: ="Enter Contact Number"
+                        HintText: ="Customer Contact Number"
                         HoverBorderColor: =RGBA(0, 0, 0, 0)
                         HoverColor: =RGBA(0, 0, 0, 0)
                         HoverFill: =Self.Color
