--- a/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
@@ -163,6 +163,7 @@ SupportScreen As screen:
                 Height: =60
                 Size: =12
                 Text: ="We welcome your questions and comments."
+                Visible: =false
                 Width: =Parent.Width
                 Y: =316
                 ZIndex: =1
@@ -173,6 +174,7 @@ SupportScreen As screen:
                 Height: =60
                 Size: =12
                 Text: ="Mailing and Phone"
+                Visible: =false
                 Width: =Parent.Width
                 ZIndex: =2
 
@@ -182,6 +184,7 @@ SupportScreen As screen:
                 Height: =60
                 Size: =12
                 Text: ="Schindler Group global headquarters"
+                Visible: =false
                 Width: =Parent.Width
                 Y: =40
                 ZIndex: =3
