--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1983,8 +1983,8 @@ LeadSummaryScreen As screen:
                                     Email: User().Email,
                                     MechanicName: User().FullName,
                                     TechnicianID: VarTechnicianID.'Personnel No',
-                                    Area: VarTechnicianID.Area,
-                                    Territory: VarTechnicianID.Territory,
+                                    //Area: VarTechnicianID.Area,
+                                    //Territory: VarTechnicianID.Territory,
                                     District: VarTechnicianID.District
                                 }
                             );
