--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -135,15 +135,16 @@ LeadListScreen As screen:
                             ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
                             DisplayFields: =["Value"]
                             InputTextPlaceholder: ="Select District"
-                            Items: |
-                                =Distinct(Filter(SHTechnicians,Territory=cmbxregionfilterLS.Selected.Value),District)
+                            Items: |-
+                                =//Distinct(Filter(LeadInformations,Territory=cmbxregionfilterLS.Selected.Value),District)
+                                Distinct(LeadInformations,District)
                             PressedColor: =RGBA(0, 0, 0, 1)
                             PressedFill: =RGBA(0, 0, 0, 0)
                             Reset: =true
                             SearchFields: =["Value"]
                             SearchItems: |-
-                                =Search(Distinct(Filter(SHTechnicians,Territory=cmbxregionfilterLS.Selected.Value),District)
-                                ,cmbxdistrictfilterLS.SearchText,"Value")
+                                =Search(//Distinct(Filter(LeadInformations,Territory=cmbxregionfilterLS.Selected.Value),District)
+                                Distinct(LeadInformations,District),cmbxdistrictfilterLS.SearchText,"Value")
                             SelectionFill: =Header.SHRed
                             Width: =200
                             X: =cmbxregionfilterLS.X+cmbxregionfilterLS.Width+5
@@ -156,15 +157,16 @@ LeadListScreen As screen:
                             ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
                             DisplayFields: =["Value"]
                             InputTextPlaceholder: ="Select Territory"
-                            Items: |
-                                =Distinct(Filter(SHTechnicians,Area=cmbxareafilterLS.Selected.Value),Territory)
+                            Items: |-
+                                =//Distinct(Filter(LeadInformations,Area=cmbxareafilterLS.Selected.Value),Territory)
+                                Distinct(LeadInformations,Territory)
                             PressedColor: =RGBA(0, 0, 0, 1)
                             PressedFill: =RGBA(0, 0, 0, 0)
                             Reset: =true
                             SearchFields: =["Value"]
                             SearchItems: |-
-                                =Search(Distinct(Filter(SHTechnicians,Area=cmbxareafilterLS.Selected.Value),Territory)
-                                ,cmbxregionfilterLS.SearchText,"Value")
+                                =Search(//Distinct(Filter(LeadInformations,Area=cmbxareafilterLS.Selected.Value),Territory)
+                                Distinct(LeadInformations,Territory),cmbxregionfilterLS.SearchText,"Value")
                             SelectionFill: =Header.SHRed
                             SelectMultiple: =false
                             Width: =200
@@ -178,12 +180,12 @@ LeadListScreen As screen:
                             ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
                             DisplayFields: =["Value"]
                             InputTextPlaceholder: ="Select Area"
-                            Items: =Distinct(SHTechnicians,Area)
+                            Items: =Distinct(LeadInformations,Area)
                             PressedColor: =RGBA(0, 0, 0, 1)
                             PressedFill: =RGBA(0, 0, 0, 0)
                             Reset: =true
                             SearchFields: =["Value"]
-                            SearchItems: =Search(Distinct(SHTechnicians,Area),cmbxareafilterLS.SearchText,"Value")
+                            SearchItems: =Search(Distinct(LeadInformations,Area),cmbxareafilterLS.SearchText,"Value")
                             SelectionFill: =Header.SHRed
                             Width: =200
                             X: =15
