--- a/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
@@ -7,8 +7,40 @@ FAQScreen As screen:
                 Answer: "The incentives for the leads entered in the App after 01 Jan 2024 are shown in the App "
             },
             {
-                Question: "what if  i already have a target list?",
-                Answer: "Lead generation is the process of identifying a B2B company that is interested in the product or service a company offers and engaging with them."
+                Question: "Can I communicate the leads using old  process ?",
+                Answer: "NO. The incentives of the leads entered using the App will ONLY be shown in the App."
+            },
+             {
+                Question: "Whom should I contact in case I have query regarding incentive calculation",
+                Answer: "See support page "
+            },
+             {
+                Question: "When incentives will be reflected in the App ?",
+                Answer: "The process of updating incentives is executed every night . You will see Incentives of the lead after 24 hours. "
+            },
+             {
+                Question: "Can I entter the leads in case I do not have contract number of the client ?",
+                Answer: "NO. You must have contract number of the client for entering the lead. "
+            },
+             {
+                Question: "Are photos are mandatory while entering the lead ?",
+                Answer: "No they are not mandatiory . You can attach upto four photos per lead."
+            },
+             {
+                Question: "Can I edit lead information after submitting the lead ?",
+                Answer: "NO . You can not change the lead information once lead is submitted . "
+            },
+             {
+                Question: "How will I get updates regarding my incetives ?",
+                Answer: "You will get Notification in the App in case status of your  lead is changed from Open to Quoted or from Quoted to Sold."
+            },
+             {
+                Question: "Will the App work on Apple and Android phones ?",
+                Answer: "Yes. It will work on both iPhone and Android phones . You need to first install Microsoft PowerApp from Apples iStore and Googles PlayStore. "
+            },
+             {
+                Question: "Do I need internet connection every time to use the App ?",
+                Answer: "Yes . Internet connectivity is required for the App."
             }
         );
         UpdateContext({VarAnswerFAQ: false});
