--- a/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
@@ -12,7 +12,7 @@ FAQScreen As screen:
             },
              {
                 Question: "Whom should I contact in case I have query regarding incentive calculation",
-                Answer: "See support page "
+                Answer: "See support page" 
             },
              {
                 Question: "When incentives will be reflected in the App ?",
@@ -219,7 +219,6 @@ FAQScreen As screen:
                     Font: =Font.Arial
                     FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                     Height: =Self.Size * 1.8
-                    OnSelect: =Select(Parent)
                     PaddingBottom: =0
                     PaddingLeft: =0
                     PaddingRight: =0
@@ -240,7 +239,7 @@ FAQScreen As screen:
                     Font: =Font.Arial
                     Height: =50
                     OnSelect: =Select(Parent)
-                    PaddingRight: =Button5_1.Width+5
+                    PaddingRight: =Button5_1.Width+8
                     Size: =12
                     Text: =ThisItem.Question
                     Width: =Parent.Width-20
@@ -277,6 +276,17 @@ FAQScreen As screen:
                     X: =Parent.Width-Self.Width-20
                     Y: =13
                     ZIndex: =5
+
+                Button1 As button:
+                    Fill: =RGBA(0, 0, 0, 0)
+                    HoverFill: =
+                    OnSelect: =If(ThisItem.Answer ="See support page",Navigate(SupportScreen))
+                    Text: ="Button"
+                    Visible: =ThisItem.IsSelected && VarAnswerFAQ && ThisItem.Answer="See support page"
+                    Width: =Parent.Width
+                    X: =Title1.X
+                    Y: =Title1.Y
+                    ZIndex: =7
 
     grpMenuCS_2 As group:
         Height: =5
