--- a/QuantumTechnicianApp/Src/AboutScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/AboutScreen.fx.yaml
@@ -162,6 +162,8 @@ AboutScreen As screen:
                 Fill: =RGBA(237, 237, 237, 1)
                 Font: =Font.Arial
                 Height: =Parent.Height-20
+                PaddingLeft: =10
+                PaddingRight: =10
                 Text: ="The App is intended to  be used by field  technicians for communicating leads to Schindler quotes and sales team. Once lead is submitted then the Quotes team reviews the lead . In case they have any query then they use chat fascility in the App. The incentives for  Quoted leads is calculted withing 24 hours . Technician gets notification once incentives are calculted and upodated in the App."
                 VerticalAlign: =VerticalAlign.Top
                 Width: =Parent.Width-20
