--- a/QuantumTechnicianApp/Src/App.fx.yaml
+++ b/QuantumTechnicianApp/Src/App.fx.yaml
@@ -118,8 +118,8 @@ App As appinfo:
             },
             {
                 Title: "Support",
-                icon: Icon.Support//,
-        //Navigate: SubmittedLeadsScreen
+                icon: Icon.Support,
+                Navigate: SupportScreen
             },
             {
                 Title: "FAQ",
