--- a/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
@@ -160,6 +160,7 @@ SupportScreen As screen:
             btnContactSS As button:
                 Color: =RGBA(0, 0, 0, 1)
                 DisabledColor: =RGBA(0, 0, 0, 1)
+                DisplayMode: =DisplayMode.View
                 Fill: =RGBA(219, 219, 219, 1)
                 Font: =Font.Arial
                 Height: =50
@@ -188,6 +189,7 @@ SupportScreen As screen:
             btnSupportSS As button:
                 Color: =RGBA(0, 0, 0, 1)
                 DisabledColor: =RGBA(0, 0, 0, 1)
+                DisplayMode: =DisplayMode.View
                 Fill: =RGBA(219, 219, 219, 1)
                 Font: =Font.Arial
                 Height: =50
